# mrnabin

./: .flake8  .gitignore  Makefile  README.md  pyproject.toml
config/: a14_config.yaml  base_dbv_config.yaml  base_distbin_config.yaml  base_vlp_config.yaml
og_vlp/: .gitignore  README.md  mar_23_vlp_cluster.F90  mar_23_vlp_cluster_fixed_size_gfortran.F90  mar_23_vlp_cluster_opt.py
sample_data/: aa_bb_contigs.fasta  aa_bb_peptides.fasta  aa_contigs.fasta  aa_peptides.fasta  bb_contigs.fasta  bb_peptides.fasta
scripts/: compare_output.sh  prepare_data.py  reformat_data.py  run_12417881_dbv.py  run_12417881_distbin.py  run_5686984_dbv.py  run_5686984_distbin.py  run_5686984_vlp.py  run_a14_dbv.py  run_a14_distbin.py  run_a14_vlp.py  run_dbv.py  run_distbin.py  run_parallel_12417881_dbv.py  run_vlp.py  sample_labeled_dbv_run.py  sample_labeled_distbin_run.py  sample_labeled_vlp_run.py
src/dbv/: README.md  binner.py  binner_test.py  scoring.py  scoring_test.py
src/distbin/: README.md  __init__.py  binner.py  binner_test.py  evaluate.py  kmers.py  kmers_test.py
src/lib/: a14.py  args.py  args_test.py  encoded_sequences.py  encoded_sequences_test.py  evaluate.py  evaluate_test.py  fasta.py  fasta_test.py
src/vlp/: README.md  binner.py  bit_ops.py  bit_ops_test.py  kmer_clustering.py  kmer_clustering_test.py  scoring.py  scoring_test.py  sorting.py  sorting_test.py  vlp_trie.py  vlp_trie_test.py
